syntax = "proto3";

option csharp_namespace = "GrpcAPI.set";

import "shared.proto";

package set;

service Set {
    rpc Has (HasRequest) returns (HasResponse);
    rpc Put (PutRequest) returns (SuccessResponse);
    rpc Delete (DeleteRequest) returns (SuccessResponse);
    rpc Clear (ClearRequest) returns (SuccessResponse);
    rpc Size (SizeRequest) returns (SizeResponse);
    rpc ListKeys (ListKeysRequest) returns ( ListKeysResponse);
}

message HasRequest {
    string database = 1;
    string setName = 2;
    string key = 3;
}

message HasResponse {
    bool has = 1;
    optional string error = 2;
}

message PutRequest {
    string database = 1;
    string setName = 2;
    string key = 3;
    string value = 4;
}

message DeleteRequest {
    string database = 1;
    string setName = 2;
    string key = 3;
}

message ClearRequest {
    string database = 1;
    string setName = 2;
}

message SizeRequest {
    string database = 1;
    string setName = 2;
}

message SizeResponse {
    int32 size = 1;
    optional string error = 2;
}

message ListKeysRequest {
    string database = 1;
    string setName = 2;
}

message ListKeysResponse {
    repeated string keys = 1;
    optional string error = 2;
}